создает инпут в футере рассылки

--- a/index.html
+++ b/index.html
@@ -548,6 +548,20 @@
             </li>
           </ul>
         </div>
+        <div class="newsletter-box">
+          <p class="newsletter-text">Подпишитесь на рассылку</p>
+          <form class="newsletter-form">
+            <label class="newsletter-label" for="">
+              <input class="newsletter-input" type="email" name="newsletter" placeholder="E-mail" />
+            </label>
+            <button class="newsletter-btn" type="button">
+              <span class="submite-text">Подписаться</span>
+              <svg class="newsletter-icon">
+                <use href="./images/sprite.svg#newsletter"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
