вносит инпуты в модальное окно

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- Секция герой -->
       <section class="hero">
         <div class="container hero-group">
-          <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <div class="backdrop is-hidden" data-modal>
             <div class="modal-wrapper">
               <button class="modal-button" data-modal-close>
@@ -68,6 +68,69 @@
                   />
                 </svg>
               </button>
+              <div class="form-wrapper">
+                <strong class="form-title">Оставьте свои данные, мы вам перезвоним</strong>
+                <form class="main-user-form">
+                  <!-- name input -->
+                  <div class="input-wrapper user-name">
+                    <label class="input-label" for="user-name">Имя</label>
+                    <div class="input-area-wrapper">
+                      <input
+                        type="text"
+                        name="user-name"
+                        id="user-name"
+                        class="input-text"
+                        autocomplete="name"
+                      />
+                      <svg class="icon-svg">
+                        <use href="./images/icons/user.svg#user"></use>
+                      </svg>
+                    </div>
+                  </div>
+                  <!-- tel input -->
+                  <div class="input-wrapper user-name">
+                    <label class="input-label" for="user-name">Имя</label>
+                    <div class="input-area-wrapper">
+                      <input
+                        type="text"
+                        name="user-name"
+                        id="user-name"
+                        class="input-text"
+                        autocomplete="name"
+                      />
+                      <svg class="icon-svg">
+                        <use href="./images/icons/phone-user.svg#phone-user"></use>
+                      </svg>
+                    </div>
+                  </div>
+                  <!-- mail input -->
+                  <div class="input-wrapper user-name">
+                    <label class="input-label" for="user-name">Имя</label>
+                    <div class="input-area-wrapper">
+                      <input
+                        type="text"
+                        name="user-name"
+                        id="user-name"
+                        class="input-text"
+                        autocomplete="name"
+                      />
+                      <svg class="icon-svg">
+                        <use></use>
+                      </svg>
+                    </div>
+                  </div>
+                  <!-- comment input -->
+                  <div>
+                    <label for=""></label>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                  </div>
+                  <!-- checkbox input -->
+                  <div>
+                    <label for=""></label>
+                  </div>
+                  <button type="submit" class="btn-base">Отправить</button>
+                </form>
+              </div>
             </div>
           </div>
           <button class="button button-hero" type="button" data-modal-open>Заказать услугу</button>
