--- a/index.html
+++ b/index.html
@@ -62,15 +62,13 @@
           <div class="backdrop is-hidden" data-modal>
             <div class="modal-wrapper">
               <button class="modal-button" data-modal-close>
-                <svg viewBox="0 0 320 512" width="18" height="18">
-                  <path
-                    d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
-                  />
+                <svg class="close-btn" width="18" height="18">
+                  <use href="./images/sprite.svg#close-black"></use>
                 </svg>
-              </button>
-              
-                <strong class="form-title">Оставьте свои данные, мы вам перезвоним</strong>
+              </button>          
+
                 <form class="modal-form">
+                  <strong class="form-title">Оставьте свои данные, мы вам перезвоним</strong>
                   <!-- name input -->
                   
                     <label class="form-modal-group" for="user-name">
@@ -83,11 +81,9 @@
                         autocomplete="name"
                         autofocus
                       />
-                      <span class="input-icon">
                         <svg class="icon-svg" width="12" height="12">
                           <use href="./images/sprite.svg#user"></use>
                         </svg>
-                      </span>         
                     </label>       
 
                   <!-- tel input -->
@@ -100,11 +96,9 @@
                         class="form-modal-input"
                         autocomplete="phone"
                       />
-                      <span class="input-icon">
                         <svg class="icon-svg" width="13" height="12">
                           <use href="./images/sprite.svg#phone-user"></use>
-                        </svg>
-                      </span>         
+                        </svg>                             
                     </label>   
 
                   <!-- email input -->
@@ -116,12 +110,10 @@
                         id="user-mail"
                         class="form-modal-input"
                         autocomplete="mail"
-                      />
-                      <span class="input-icon">
+                      />                   
                         <svg class="icon-svg" width="15" height="12">
                           <use href="./images/sprite.svg#mail-user"></use>
-                        </svg>
-                      </span>         
+                        </svg>                     
                     </label>   
 
                   <!-- comment input -->
